--- a/wiki/informe.tex
+++ b/wiki/informe.tex
@@ -20,7 +20,11 @@
 \titleformat{\section}{\normalfont\Large\bfseries}{\thesection.}{1em}{}
 
 \title{Informe Técnico\\ \large EVA – Evaluador Virtual Académico}
-\author{Darío López Falcón\\\\Facultad de Matemática y Computación (MATCOM)\\Universidad de La Habana}
+\author{Darío López Falcón\\\\
+Facultad de Matemática y Computación (MATCOM)\\
+Universidad de La Habana\\\\
+% \texttt{\href{https://github.com/ArcanoxXx-01/EVA}{link del proyecto}}
+}
 \date{\today}
 
 \begin{document}
@@ -198,5 +202,10 @@ El proyecto demuestra que es posible automatizar la evaluación académica con m
 
 \section*{Licencia}
 Este proyecto está licenciado bajo la \textbf{MIT License}.
+
+\section*{Repositorio del proyecto}
+El código fuente del sistema EVA está disponible en:
+
+\url{https://github.com/ArcanoxXx-01/EVA}
 
 \end{document}
